[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["boison <boison88@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
